ESTORE-25 Migrating to Spring Boot 3 (have problem with WebSecurityConfig)